Fix weird stone image clipping on non square images

--- a/css/goban.css
+++ b/css/goban.css
@@ -127,7 +127,7 @@
         box-shadow: 0 .1em .2em rgba(23, 10, 2, .4);
     }
     .shudan-stone-image {
-        background-size: 100%;
+        background-size: 100% 100%;
         background-repeat: no-repeat;
     }
     .shudan-stone-image.shudan-sign_1 {
